Rules geimplementeerd, iterators, etc.