@@ -1,20 +1,21 @@
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Rule implements Term {
     Fact head;
-    List<Term> body;
+    List<Fact> body;
 
-    public Rule(Fact head, List<Term> body) {
+    public Rule(Fact head, List<Fact> body) {
         this.head = head;
         this.body = body;
     }
 
     public Rule(Rule other) {
         this.head = new Fact(other.head);
-        this.body = new ArrayList<>(other.body);
+        this.body = other.body.stream()
+                .map(Fact::new)
+                .toList();
     }
 
     public static boolean isRule(String line) {
@@ -47,18 +48,27 @@ public class Rule implements Term {
         Fact head = Fact.fromString(parts[0]);
         ArrayList<String> bodyParts = splitBodyString(parts[1]);
 
-        List<Term> body = bodyParts.stream().map(Parser::parseChunk).toList();
+        List<Fact> body = bodyParts.stream().map(Parser::parseChunk)
+                .filter(t -> t instanceof Fact)
+                .map(t -> (Fact) t).collect(Collectors.toList());
 
         return new Rule(head, body);
     }
 
     public boolean resolve(TermDatabase db, Fact query) {
-        if (this.head.shallowEquals(query)) {
-            Rule copy = new Rule(this);
-            copy.fill(query);
-
-            return copy.body.stream().allMatch(t -> t.resolve(db, query));
+        if (!this.head.shallowEquals(query)) {
+            return false;
         }
+
+        Rule copy = new Rule(this);
+        copy.fill(query);
+
+        return copy.body.stream().allMatch(db::resolveQuery);
+    }
+
+    @Override
+    public Fact unify(TermDatabase db, Fact query) {
+        return null;
     }
 
     public void fillVariable(Variable var, Term fill) {
